k8s/node-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: node-server
  name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/bb: "true"
        io.kompose.network/bf: "true"
        io.kompose.service: node-server
    spec:
      containers:
        - image: node-server
          name: node-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
