k8s/bb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bb
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/bb: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bb: "true"
